--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,7 +10,7 @@
     @import 'modal';
     @import 'models';
     @import 'table';
-    @import 'topbar';
+    //@import 'topbar';
     @import 'information';
     @import 'authorize';
     @import 'errors';
